syntax = "proto3";

package ru.tinkoff.invest.tracking.master;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// Операция в виртуальном портфеле
message MasterPortfolioOperation {

  // Идентификатор стратегии
  bytes strategy_id = 1;

  // Метка времени события, инициировавшего отправку события
  google.protobuf.Timestamp changed_at = 2;

  // Фрагмент портфеля
  Portfolio portfolio = 3;

  // Произошедшее событие
  oneof type {

    // Торговая сделка
    Trade trade = 4;

    // Начисление дивидендов
    Dividend dividend = 5;

    // Завод средств
    Adjust adjust = 6;
  }

  message Portfolio {
    // Фрагмент портфеля
    int32 version = 1;
  }

  // Торговая сделка
  message Trade {

    // Инструмент, на который направлено действие
    bytes instrument_id = 1;

    // Кол-во единиц актива (не лоты)
    Decimal quantity = 2;

    // Цена за одну единицу актива (в абсолютной величине)
    Decimal price = 3;

    // Направление сделки
    Direction direction = 4;

    // Направление сделки
    enum Direction {
      SELL = 0;
      BUY = 1;
    }
  }

  message Dividend {

    // Актив, за владение которым выплачивается дивиденд
    bytes asset_id = 1;

    // Сумма выплаты
    Decimal amount = 2;

    // Валюта выплаты
    string currency = 3;
  }

  message Adjust {

    // Изменяемая позиция в мастер-портфеле
    bytes position_id = 1;

    // Сумма завода
    Decimal quantity = 2;
  }
}

// Контейнер для безопасной передачи вещественного числа, обозначающего "деньги"
message Decimal {

  int64 unscaled = 1;

  int32 scale = 2;
}